# flying_desktop_client

./: .gitignore  CMakeLists.txt
libs/imgui/: Makefile  cmake_install.cmake
src/: actions.h  connection.cpp  connection.h  constants.h  controlsSender.cpp  controlsSender.h  debugReceiver.cpp  debugReceiver.h  frameCapturer.cpp  frameCapturer.h  frameDecoder.cpp  frameDecoder.h  main.cpp  packetsReceiver.cpp  packetsReceiver.h  packetsSender.cpp  packetsSender.h  packetsTransmitter.cpp  packetsTransmitter.h  separateLoop.cpp  separateLoop.h  window.cpp  window.h
